fixed highlight code overflow fix

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,6 +8,10 @@ body {
   height: 100vh;
   overflow-wrap: break-word;
   word-wrap: break-word;
+
+  @media screen and (max-width: 960px) {
+    display: block;
+  }
 }
 
 header {
